--- a/public/src/app/main-content/languages/languages.component.css
+++ b/public/src/app/main-content/languages/languages.component.css
@@ -10,6 +10,7 @@ h1, h2 {
 .container {
   width: 100%;
   height: 75vh;
+  min-height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
