--- a/public/src/app/main-content/main-content.component.css
+++ b/public/src/app/main-content/main-content.component.css
@@ -72,7 +72,7 @@ input {
   width: auto;
   color: #fff;
   z-index: 9000;
-  padding: 3%;
+  padding: 5%;
   font-family: delicious;
 }
 /*test*/
